test/classes/diten/test_destroy2.good
test_destroy2.chpl:3 syntax error: near '~'
